added pascal as author

--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -31,13 +31,13 @@
 %\author[1]{Rafael Marini-Silva}
 %\author[1]{Norbert Bus}
 %\author[1]{Nikos Komodakis}
-%\author[3]{Pascal Fenoglietto}
+\author[3]{Pascal Fenoglietto}
 
 \affil[1]{TheraPanacea, Paris, France}
 
 \affil[2]{MICS, CentraleSupélec, Université Paris-Saclay, Paris, France}
 
-%\affil[3]{Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France}
+\affil[3]{Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France}
 
 %%%%% don't change these 2 lines %%%%%
 \maketitle
