--- a/llncs_formatting.tex
+++ b/llncs_formatting.tex
@@ -27,8 +27,8 @@
 %		Norbert Bus\inst{2}
 %		\and \\
 %		Nikos Komodakis\inst{2}
-%		\and \\
-%		Pascal Fenoglietto\inst{3}
+		\and \\
+		Pascal Fenoglietto\inst{3}
 	}
 	% \authorrunning{F. Author et al.}
 	% First names are abbreviated in the running head.
@@ -42,11 +42,11 @@
 		\email{\{p.dubois,n.paragios\}@therapanacea.eu}\\
 %		\email{\{p.dubois,n.paragios,r.marini-silva,n.bus,n.komodakis\}@therapanacea.eu}\\
 		\url{https://www.therapanacea.eu/}
-%		\and
-%		Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France\\
-%		\email{paul.dubois@icm.unicancer.fr}\\
-%		\email{\{paul.dubois,pascal.fenoglietto\}@therapanacea.eu}\\
-%		\url{https://www.therapanacea.eu/}
+		\and
+		Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France\\
+		\email{paul.dubois@icm.unicancer.fr}\\
+		\email{\{paul.dubois,pascal.fenoglietto\}@therapanacea.eu}\\
+		\url{https://www.therapanacea.eu/}
 	}
 	
 	\maketitle
