--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -61,12 +61,12 @@
 %	\Name{Norbert Bus\nametag{$^{2}$}} \Email{n.bus@therapanacea.eu}
 %	\AND
 %	\Name{Nikos Komodakis\nametag{$^{2}$}} \Email{n.komodakis@therapanacea.eu}
-%	\AND
-%	\Name{Pascal Fenoglietto\nametag{$^{3}$}} \Email{Pascal.Fenoglietto@icm.unicancer.fr}
+	\AND
+	\Name{Pascal Fenoglietto\nametag{$^{3}$}} \Email{Pascal.Fenoglietto@icm.unicancer.fr}
 	\\
 	\addr $^{1}$ Biomathematics, MICS, CentraleSupélec, Université Paris-Saclay
 	\addr $^{2}$ TheraPanacea
-%	\addr $^{3}$ Institut du Cancer de Montpellier
+	\addr $^{3}$ Institut du Cancer de Montpellier
 }
 
 \begin{document}
