fixed wrong emails

--- a/llncs_formatting.tex
+++ b/llncs_formatting.tex
@@ -45,8 +45,8 @@
 		\and
 		Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France\\
 		\email{paul.dubois@icm.unicancer.fr}\\
-		\email{\{paul.dubois,pascal.fenoglietto\}@therapanacea.eu}\\
-		\url{https://www.therapanacea.eu/}
+		\email{\{paul.dubois,pascal.fenoglietto\}@icm.unicancer.fr}\\
+		\url{https://www.icm.unicancer.fr/fr}
 	}
 	
 	\maketitle
