fit in 10 pages for submission

--- a/my_content.tex
+++ b/my_content.tex
@@ -135,6 +135,7 @@ This show the difficulty to create a metric that capture all the complexity of a
 		\textit{$^\dagger$: score is imporved performance through a higher score.}
 	}
 \end{table}
+\vspace{-1.4cm}
 
 \subsection{Qualitative Results}
 Figure \ref{fig:steps} shows the DVHs at each of the first four optimization steps on one of the test patients, unseen by the agent during the training.
@@ -185,14 +186,14 @@ Likewise, we generate five organs gravitating around the PTV, aligned on the axi
 
 \begin{figure*}
 	\centering
-	\label{fig:main_slice-ct}	\includegraphics[height=4.5cm]{main_slice-ct.pdf}
+	\label{fig:main_slice-ct}	\includegraphics[height=3.5cm]{main_slice-ct.pdf}
 	\hspace{0.5cm}
 	\label{fig:main_slice-dose}
-	\includegraphics[height=4.5cm]{main_slice-dose.pdf}
+	\includegraphics[height=3.5cm]{main_slice-dose.pdf}
 	%	\hspace{0.1cm}
 	\\
 	\label{fig:clinical_dvh}
-	\includegraphics[width=10cm]{dvh_example.pdf}
+	\includegraphics[width=7cm]{dvh_example.pdf}
 	\caption{
 		Example of a (generated) patient: \\
 		\textit{Left:} Main axial slice (center of the PTV) \textbf{CT}.\\
@@ -201,6 +202,7 @@ Likewise, we generate five organs gravitating around the PTV, aligned on the axi
 	}
 	
 \end{figure*}
+\vspace{-1cm}
 
 \subsubsection*{Clinical dose}
 After generating the patient's CT and structures, we needed to create a reference dose that our agent should mimic.
